# SortingAlgorithmsVisualization

./: .clang-format  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  ISorting.cpp  ISorting.h  ISortingAlgorithm.cpp  ISortingAlgorithm.h  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  README.md  SelectionSort.cpp  SelectionSort.h  SortingVisualization.cpp  SortingVisualization.h  VisualDataStorage.cpp  VisualDataStorage.h  Visualization.cpp  Visualization.h  conanfile.py  main.cpp  utils.h
